tests/fixtures/invalid/list_add_int.py
# Cannot add list and Int
x: list[int] = [1, 2] + 3
